Add swagger 3.0 generation API
